# ai-application-october-2025-app

./: .env.example  .gitignore  PUBNUB_JOB_PROCESSOR.md  README.md  ai_code_reviewer.py  load_embeddings.py  main.py  prompts.md  pubnub_job_processor.py  pyproject.toml  render.yaml  requirements.txt  supabase_lib.py
.github/workflows/: llm-code-review.yml
backend/: .env.example  main.py
data/: synthetic_data_jobs.json  synthetic_profiles.json
frontend/: .env.example  package-lock.json  package.json
frontend/src/: App.tsx
supabase/: rag_content.sql  resumes.sql
supabase/explain_queries/: explain_cosine_index_query.sql  explain_index_query.sql  index_miss_example_query.sql
supabase/indices/: hnsw_index.sql  ivff_index.sql  job_index.sql  profile_index.sql
supabase/migrations/: create_job_responses_table.sql  match_documents.sql  match_documents_by_document_type.sql  match_documents_by_document_types_array.sql
templates/: chat.html  index.html  pingpong.html  resume.html  resume_with_matching.html  resume_with_matching_pubnub.html
