[project]
name = "ai-application-october-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.119.1",
    "jinja2>=3.1.6",
    "openai>=2.6.0",
    "pubnub>=10.4.1",
    "python-dotenv>=1.1.1",
    "supabase>=2.22.1",
    "uvicorn>=0.38.0",
]
